New slides & additional styling added

--- a/index.html
+++ b/index.html
@@ -16,9 +16,45 @@
       <section class="background" style="background-image: url('./img/1.jpg')"></section>
       <section class="background" style="background-image: url('./img/2.jpg')">
         <div class="wrap">
-          <h1 class="color-white">When all great things were made...</h1>
+          <h1>When all great things were made...</h1>
         </div>
       </section>
+      <section class="background" style="background-image: url('./img/3.jpg')">
+        <div class="wrap">
+          <h1>Endless possibilities</h1>
+        </div>
+      </section>
+      <section class="background" style="background-image: url('./img/4.jpg')">
+        <div class="wrap">
+          <h1>Beyond imaginations</h1>
+        </div>
+      </section>
+      <section class="background" style="background-image: url('./img/5.jpg')">
+        <div class="wrap">
+          <h1>Waiting for You</h1>
+        </div>
+      </section>
+      <section class="background" style="background-image: url('./img/6.jpg')">
+        <div class="wrap">
+          <h1>Jump in</h1>
+        </div>
+      </section>
+      <section class="background" style="background-image: url('./img/7.jpg')">
+        <div class="wrap">
+          <h1>Reach your destination</h1>
+        </div>
+      </section>
+      <section class="background" style="background-image: url('./img/8.jpg')">
+        <div class="wrap">
+          <h1>Lightning fast</h1>
+        </div>
+      </section>
+      <section class="background" style="background-image: url('./img/9.jpg')">
+        <div class="wrap">
+          <h1 class="end">The the End</h1>
+        </div>
+      </section>
+      <section class="background" style="background-image: url('./img/10.jpg')"></section>
     </article>
   </main>
 
